fix auto resizing on safari

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -133,17 +133,17 @@ margin-bottom: .30em;
 }
 
 .background {
- background: image-url('image3.jpg');
- background-repeat: no-repeat;
- z-index: -1;
  position: fixed;
- -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
- background-size: cover;
- width:100%; height:100%;
- overflow: hidden;
-
+  left: 50%;
+  bottom: 0px;
+  min-width: 100%;
+  min-height: 120%;
+  z-index: 0;
+  background: url('image3.jpg');
+  margin-left: -50%;
+  background-position: center center;
+  background-attachment: fixed;  
+  background-size: cover;
 }
 
 textarea{
@@ -160,8 +160,9 @@ textarea{
 .body{
 	
 	padding-top: 30px; 
-	height: 100%;
-    overflow: scroll;
+	height:100%;
+	overflow: scroll;
+	-webkit-overflow-scrolling: touch;
 
 }
 
